# devops-terraform-demo

./: .gitignore  ARCHITECTURE.md  Makefile  PROJECT_BUILDING.md  README.md  docker-compose.registry.yml
.cursor/plans/: github_workflows_refactor_ecace41a.plan.md
.github/workflows/: build-service.yml  build.yml  deploy-service.yml  deploy.yml  dev-build-all.yml  dev-full-setup.yml  infra-apply.yml  infra-destroy.yml  infra-init.yml  infra-plan.yml  infra.yml
infra/envs/production/: .terraform.lock.hcl  backend.tf  database.tf  ingress.tf  main.tf  namespaces.tf  observability.tf  outputs.tf  providers.tf  registry.tf  resume-agent.tf  server-migration.tf  server.tf  terraform.tfvars.example  variables.tf  web.tf
infra/envs/staging/: backend.tf  ingress.tf  namespaces.tf  outputs.tf  providers.tf  resume-agent.tf  server-migration.tf  terraform.tfvars.example
infra/envs/testing/: .terraform.lock.hcl  database.tf  main.tf  observability.tf  server.tf  terraform.tfvars.example  variables.tf  web.tf
infra/modules/app/: main.tf  (+2 more)
infra/scripts/: apply.sh  destroy.sh  init.sh  plan.sh
infra/shared/: data.tf  locals.tf  versions.tf
python/resume-agent/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
python/resume-agent/src/resume_agent/: main.py
python/resume-agent/src/resume_agent/agent/: resume_agent.py
python/resume-agent/src/resume_agent/api/: routes.py
python/resume-agent/src/resume_agent/models/: schemas.py
typescript/: .dockerignore  Makefile  README.md  bts.jsonc  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+59 files in other folders)
